Fix overflow in scores.html

--- a/styles/scores.css
+++ b/styles/scores.css
@@ -17,6 +17,7 @@ body {
   align-items: center;
   padding: 3%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  overflow-x: hidden;
 }
 
 .scores-container {
